--- a/ikhouvanjou/index.html
+++ b/ikhouvanjou/index.html
@@ -19,6 +19,12 @@
         margin-top: 20px;
         font-weight: bold;
       }
+      h4 {
+        color: #DE4C8A;
+        font-size: 1rem; /* Mobiel-geoptimaliseerd */
+        margin-top: 0px;
+        font-weight: bold;
+      }
       p {
         font-size: 1rem;
         font-style: italic;
@@ -154,11 +160,15 @@
       </p>
     </div>
 
+    <h4>Een slideshow van herinneringen van ons (en gewoon wat leuke foto's &#128513;)</h4>
+
     <div id="slideshow">
       <button onclick="prevImage()">&#8592;</button>
       <img id="slide" src="/IMG_1537.JPG" alt="Slideshow image">
       <button onclick="nextImage()">&#8594;</button>
     </div>
+
+    <h4>Dit is het refrein, van het nummer wat ik eigenlijk had willen maken voor jou op de dag dat ik je wilde vragen &#8595;</h4>
 
     <div class="audio-player">
       <button id="playPause">
@@ -167,13 +177,15 @@
       <input type="range" id="seekBar" value="0" step="1">
     </div>
 
-    <audio id="audio">
-      <source src="/recording.mp4" type="audio/mp3">
+    
+
+    <audio id="audio" src="/recording.mp4" preload="auto">
+      Uw browser ondersteunt het audio-element niet.
     </audio>
 
     <script>
       // Slideshow
-      const images = [
+      let images = [
         "/IMG_3803.JPG","/IMG_3804.JPG","/IMG_3805.JPG","/IMG_3806.JPG",
         "/IMG_3807.JPG","/IMG_3808.JPG","/IMG_3809.JPG","/IMG_3810.JPG",
         "/IMG_2575.JPG","/IMG_2574.JPG","/IMG_2544.JPG","/IMG_2316.png",
@@ -193,6 +205,22 @@
         "/17dda1d8-600f-4e55-b98c-c8de9f4077a7.jpg"
       ];
       let current = 0;
+
+      // Fisher-Yates (Knuth) Shuffle Algorithm
+      function shuffleArray(array) {
+          for (let i = array.length - 1; i > 0; i--) {
+              const j = Math.floor(Math.random() * (i + 1));
+              [array[i], array[j]] = [array[j], array[i]];
+          }
+      }
+
+      // 1. Shuffle de afbeeldingen zodra het script wordt uitgevoerd
+      shuffleArray(images);
+
+      // 2. Toon de eerste afbeelding na het shufflen
+      document.getElementById("slide").src = images[current];
+
+
       function showImage(index) {
         document.getElementById("slide").src = images[index];
       }
@@ -205,16 +233,33 @@
         showImage(current);
       }
 
+      
+
       // Audio controls
       const audio = document.getElementById("audio");
       const playPauseBtn = document.getElementById("playPause");
       const playIcon = document.getElementById("playIcon");
       const seekBar = document.getElementById("seekBar");
 
+      // Stel de seekbar lengte in zodra de audio metadata geladen is
+      audio.addEventListener('loadedmetadata', () => {
+          seekBar.max = Math.floor(audio.duration); 
+      });
+
       playPauseBtn.addEventListener("click", () => {
         if (audio.paused) {
-          audio.play();
-          playIcon.src = "/pause.png"; // zorg dat je ook een pause-icon hebt
+          // Gebruik .play() met een Promise om errors op mobiel te vangen
+          audio.play()
+            .then(() => {
+              playIcon.src = "/pause.png"; // Zorg dat je een pause-icon hebt
+            })
+            .catch(error => {
+              // Dit vangt de Autoplay Policy error op mobiele browsers
+              console.error("Afspelen mislukt door browserbeleid:", error);
+              // Een melding kan de gebruiker informeren
+              alert("Helaas, de browser staat afspelen niet direct toe. Tik nogmaals om de audio te starten.");
+              playIcon.src = "/play.png"; // Blijf op 'play' als het afspelen faalt
+            });
         } else {
           audio.pause();
           playIcon.src = "/play.png";
@@ -222,11 +267,13 @@
       });
 
       audio.addEventListener("timeupdate", () => {
-        seekBar.value = (audio.currentTime / audio.duration) * 100;
+        // Update de slider waarde in seconden
+        seekBar.value = Math.floor(audio.currentTime);
       });
 
       seekBar.addEventListener("input", () => {
-        audio.currentTime = (seekBar.value / 100) * audio.duration;
+        // Update de afspeeltijd op basis van de slider waarde (in seconden)
+        audio.currentTime = seekBar.value;
       });
     </script>
   </body>
