--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
       <a href="/hint1"> <img src="IMG_1537.JPG" width="248" height="440" style="border-radius: 2%;"> </a>
       <h1 style="color:#DE4C8A;">1 Jaar samen &heartsuit;</h1>
       <b><p id="demo" style="color:#DE4C8A;">1 Oktober 2024 &heartsuit;</p></b>
-      <input type="password" onsubmit="test()" onkeypress="onKeyPress(event)" id="secret"></input>
+      <input type="text" onsubmit="test()" onkeypress="onKeyPress(event)" id="secret"></input>
   </div>
     
+
 
 </body>
