--- a/ikhouvanjou/index.html
+++ b/ikhouvanjou/index.html
@@ -190,7 +190,7 @@
 
     
 
-    <h4>En dit is het refrein, van het nummer wat ik eigenlijk had willen maken voor jou op de dag dat ik je wilde vragen &#8595;</h4>
+    <h4>En dit is dus het refrein, van het nummer wat ik eigenlijk had willen maken voor jou op de dag dat ik je wilde vragen &#8595;</h4>
 
     <div class="audio-player">
       <button id="playPause">
