--- a/20-oktober/index.html
+++ b/20-oktober/index.html
@@ -69,6 +69,7 @@
 
   <script>
     function test() {
+      sessionStorage.setItem('isGevlagd', 'true');
       window.location.href = "/ikhouvanjou"
     }
     
