--- a/hint3/index.html
+++ b/hint3/index.html
@@ -44,6 +44,12 @@
   button {
     text-align: center;
     border-radius: 8px;
+    padding: 8px 15px;
+    border: 1px solid #DE4C8A;
+    background-color: #DE4C8A;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
   }
   img {
     max-width: 60%; 
